# arba-rand

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  benchmark_rnrg64s.cpp  example.cpp  rand_i64_example.cpp  xorshift64_range_engine_example.cpp
include/arba/rand/: bit_balanced_uints.hpp  rand.hpp  random.hpp  urng.hpp  xorshift.hpp  xorshift_engine.hpp
include/arba/rand/algorithm/: xoron64_fill.hpp
include/arba/rand/rng/: urng.hpp  xorshift_engine.hpp
include/arba/rand/rnrg/: rnrg_benchmark.hpp  xoron64_range_engine.hpp  xorshift_range_engine.hpp
src/arba/rand/: rand.cpp  random.cpp
test/: CMakeLists.txt  bit_balanced_uints_tests.cpp  project_version_tests.cpp  rand_tests.cpp  random_tests.cpp  urng_tests.cpp  xorshift32_engine_tests.cpp  xorshift64_engine_tests.cpp  xorshift_tests.cpp
test/rng/: CMakeLists.txt  urng_tests.cpp  xorshift32_engine_tests.cpp  xorshift64_engine_tests.cpp
test/rnrg/: CMakeLists.txt  benchmark_rnrg64s_tests.cpp  xoron64_range_engine_tests.cpp  xorshift32_range_engine_tests.cpp  xorshift64_range_engine_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
tool/: CMakeLists.txt  bit_balanced_uints_tester.cpp
